--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
         "lisp",
         "interpreter"
     ],
+    "bin": {
+        "lispjs": "index.js"
+    },
     "engines": {
         "node": "*"
     },
