--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "lisp.js",
     "version": "0.0.1",
     "description": "A tiny lisp interpreter",
-    "author": "Guannan Wei",
+    "author": "Kraks <kiss.kraks@gmail.com>",
     "keywords": [
         "lisp",
         "interpreter"
