--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "lisp.js",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "A tiny lisp interpreter",
     "author": "Kraks <kiss.kraks@gmail.com>",
+    "repository": "git://github.com/Kraks/lisp.js",
     "keywords": [
         "lisp",
         "interpreter"
